# ESTYM_AI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: init-db.sql  nginx.conf
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/cases/: page.tsx
frontend/src/app/cases/[id]/: page.tsx
frontend/src/app/cases/new/: page.tsx
frontend/src/app/health/: page.tsx
frontend/src/components/cases/: CostBreakdownView.tsx  PartSpecView.tsx  StatusBadge.tsx  TechPlanView.tsx  WorkflowStepper.tsx
frontend/src/components/files/: FileDropzone.tsx
frontend/src/components/layout/: Sidebar.tsx  TopBar.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
src/estym_ai/: __init__.py  main.py
src/estym_ai/agents/: __init__.py  cost_agent.py  drawing_agent.py  erp_agent.py  intake_agent.py  qa_agent.py  state.py  workflow.py
src/estym_ai/api/: __init__.py  app.py
src/estym_ai/api/routes/: cases.py  files.py  health.py  quotes.py
src/estym_ai/calc/: __init__.py  cost_engine.py  ml_corrector.py  time_norms.py
src/estym_ai/config/: settings.py
src/estym_ai/db/: __init__.py  models.py  repository.py  session.py
src/estym_ai/models/: __init__.py  enums.py  inquiry.py  part_spec.py  quote.py  tech_plan.py
src/estym_ai/pipeline/: __init__.py  dxf_parser.py  file_router.py  pdf_processor.py  step_analyzer.py  vision_analyzer.py
src/estym_ai/similarity/: __init__.py  clustering.py  embeddings.py
src/estym_ai/utils/: celery_app.py
tests/unit/: test_cost_engine.py  test_models.py  test_similarity.py  test_time_norms.py
