[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "estym-ai"
version = "0.1.0"
description = "AI-powered steel product estimation platform with multi-agent orchestration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Mateusz Marks", email = "marks.mateusz@wp.pl" },
]

dependencies = [
    # Core framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # LangGraph / LangChain orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "redis>=5.0.0",
    "neo4j>=5.20.0",

    # Task queue
    "celery[redis]>=5.4.0",

    # CAD/PDF processing
    "ezdxf>=0.18.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "trimesh>=4.0.0",
    "Pillow>=10.0.0",

    # ML / Embeddings / Similarity
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "shap>=0.45.0",
    "hdbscan>=0.8.33",
    "openai>=1.30.0",

    # Object storage
    "minio>=7.2.0",

    # Email processing
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.9",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
gpu = [
    "torch>=2.3.0",
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
]
cad3d = [
    # PythonOCC requires conda installation
    # Install via: conda install -c conda-forge pythonocc-core
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
